--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,25 @@
   margin: 0;
   padding: 0;
   box-sizing: 0;
-  font-family: 'Amatic SC', cursive;
+
 }
 
 body {
   background-color: var(--tg-theme-secondary-bg-color);
+  /* background-image: url('/public/pics/denim1.jpg');
+  background-position: center;
+  background-size: contain */
 }
 
 
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap');
 
 
 .hero {
-  width: 90%;
-  margin-left: 5%;
+  width: 100%;
   position: relative;
-  display: flex;
-  justify-content: space-between;
-  row-gap: 10vw;
-  flex-wrap: wrap;
+  
   /* z-index: -1; */
 }
 
@@ -186,3 +185,5 @@ li {
   height: 20px;
   flex: 1;
 }
+
+
