--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
   /* background-image: url('/public/pics/denim1.jpg');
   background-position: center;
   background-size: contain */
+  --swiper-theme-color: #B8AE8D;
 }
 
 
@@ -124,7 +125,7 @@ body {
   background: #fff;
 }
 
-button {
+.Ibibutton {
   outline: none;
   border: none;
   -webkit-user-select: none;
@@ -205,4 +206,48 @@ li {
   font-family: 'Oswald', sans-serif;
   font-size: 12px;
   font-weight: 200;
+}
+
+.StyledBoxModal {
+  position: absolute !important;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  height: 96% !important;
+  background-color: rgb(255, 255, 255);
+  color: white;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  text-align: start;
+}
+
+.BoxModal__button {
+  width: 100%;
+  background: rgba(0, 0, 0, 0) !important;
+  font-size: 2vw;
+  border-radius: 0px !important;
+}
+
+.Swiper__main{
+  height: 400px;
+  width: 90vw;
+  color: black;
+}
+
+.Swiper__image{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.P_title{
+  color: black;
+  font-family: 'Oswald', sans-serif;
+  font-size: 28px;
+  font-weight: 900;
 }
