--- a/src/App.css
+++ b/src/App.css
@@ -345,3 +345,16 @@ li {
   margin-top: -5px;
   height: 65px;
 }
+
+.P_title{
+  width: 90%;
+  margin-left: 5%;
+  margin-top: 30px;
+}
+.P_des{
+  width: 90%;
+  margin-left: 5%;
+  margin-top: 14px;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.723);
+}
